fix/alignment issues

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -207,8 +207,6 @@ header {
   align-items: center;
   justify-content: center;
   justify-content: flex-start;
-
-  border: 2px solid #ccc;
 }
 
 #pdf-container {
